test/corpus/import_definition.txt
==================
Import definition
==================

using Toybox.Application;
using Toybox.Lang;
using Toybox.WatchUi;

---

(source_file
 (using_statement
  import: (property_access
   object: (identifier)
   property: (identifier)))
 (using_statement
  import: (property_access
   object: (identifier)
   property: (identifier)))
 (using_statement
  import: (property_access
   object: (identifier)
   property: (identifier))))
