test/corpus/typedef.txt
==================
Typedef
==================

typedef AccelCallback as Method(data as Sensor.SensorData) as Void;

---

(source_file
 (type_definition
  name: (identifier)
  type: (type_identifier
    type: (method_type
      (parameter_list
       (identifier)
       (type_identifier
        type: (property_access
          object: (identifier)
          property: (identifier))))
      (type_identifier
       type: (identifier)))))
 (empty_statement))


